--- a/public/style.css
+++ b/public/style.css
@@ -5,13 +5,13 @@
 html,
 body,
 #container {
-  position: relative;
   height: 500px;
-  width: 100%;
+  max-width: 100%;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   font-size: 16px;
+  overflow-x: hidden,
 }
 
 /* 
