--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body,
 #container {
   background-color: #0096d6;
   color: #fff;
-  height: 500px;
+  max-height: 100%;
   max-width: 100%;
   margin: 0;
   padding: 0;
